--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,12 @@
 server.port=8089
 spring.application.name=sport-on
-spring.profiles.active=prod
-jwt.secret-key=hvmjScMf7OO4oCScjI7afn7aoJ8XQRHIsrJAyDAHq/8=
+spring.profiles.active=dev
+jwt.secret-key=BP+QlmntKxPGxJxyQD5d3pxtw4OSMi3+161++ngJZq8=
 jwt.expiration=315360000000
 jwt.refresh-expiration=315360000000
+
+# Set maximum allowed size for a single file upload
+spring.servlet.multipart.max-file-size=100MB
+
+# Set maximum allowed size for a complete request, including all files and fields
+spring.servlet.multipart.max-request-size=100MB
