--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8089
 spring.application.name=sport-on
-spring.profiles.active=dev
+spring.profiles.active=prod
 jwt.secret-key=BP+QlmntKxPGxJxyQD5d3pxtw4OSMi3+161++ngJZq8=
 jwt.expiration=315360000000
 jwt.refresh-expiration=315360000000
